[package]
name = "dev-console"
version = "0.0.0"
description = "DevConsole"
authors = ["Keyle"]
license = ""
repository = ""
default-run = "dev-console"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8", features = ["os-all", "shell-open", "updater", "shell-sidecar", "http-all", "dialog-open", "fs-all", "dialog-confirm", "window-close", "shell-execute", "process-exit", "path-all", "dialog-save", "devtools"] }
log = "0.4.19"
sentry = "0"
sysinfo = "0.36"
specta = "1.0.5"
tauri-specta = { version = "1", features = ["typescript"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
